k8s/osdu/identity/overlays/do-private/patches/patch-db-storageclass.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-db
  namespace: osdu-identity
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
        storageClassName: do-block-storage-retain
