k8s/osdu/identity/overlays/do-private/patches/patch-keycloak-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: osdu-identity
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
